@@ -1,12 +1,10 @@
 <VFolderInfo>
   <!-- Merge dirs optional -->
-  <ItemDir>@datadir@/gnome/network/</ItemDir>
-  <UserItemDir>~/.gnome2/vfolders/network/</UserItemDir>
-
-  <!-- <DesktopDir>@datadir@/gnome/vfolders/</DesktopDir> -->
+  <WriteDir>~/.gnome2/vfolders/network/</WriteDir>
 
   <!-- Root folder -->
   <Folder>
+    <Parent>@datadir@/gnome/network/</Parent>
     <Name>Network Shares</Name>
     <Query>
       <Not>
