@@ -1,3 +1,8 @@
+2002-10-31  Bastien Nocera  <hadess@hadess.net>
+
+	* modules/vfolder/network.vfolder-info.in: make writing to network:
+	work again
+
 2002-10-30  Bastien Nocera  <hadess@hadess.net>
 
 	* modules/default-modules.conf:
